<resources>
    <string name="app_name">First App</string>
    <string name="send_message">LinearLayout</string>
    <string name="receive_message">Receive</string>
    <string name="delete_message">Delete</string>
    <string name="send_toast">Message has been sent</string>
    <string name="receive_toast">Message has been received</string>
    <string name="delete_toast">Message has been deleted</string>
    <string name="hint_msg_email">Enter email here</string>
    <string name="hint_msg_pass">Enter password here</string>
    <string name="submit_button">Submit</string>
    <string name="clear_button">Clear</string>
    <string name="back_button">Back</string>
</resources>